Final updates and improvements
- Enhanced Windows one-click installation scripts
- Updated documentation with comprehensive deployment options
- Improved authentication and configuration handling
- Added robust error handling and user guidance
- Updated README with latest installation methods
- Refined deployment guide with Windows GitHub Desktop integration

--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ SECRET_KEY=your-secret-key-change-this-in-production
 ARUBA_WS_HOST=0.0.0.0
 ARUBA_WS_PORT=9191
 
+# Authentication Configuration
+ARUBA_AUTH_TOKENS=1234,admin,aruba-iot,secure-token-2025
+
 # Alternative: Bind to specific interface (uncomment if needed)
 # ARUBA_WS_HOST=192.168.255.34
 
