Add --allow-unsafe-werkzeug flag to docker-compose.yml for Flask compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ version: '3'
 services:
   aruba-iot:
     build: .
+    command: python app.py --allow-unsafe-werkzeug
     ports:
       - "9090:9090"  # Web dashboard
       - "9191:9191"  # WebSocket server
