Update python-dotenv to 1.1.1 and fix protobuf dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,7 @@ asyncio
 json5
 paho-mqtt==1.6.1
 requests==2.31.0
-python-dotenv==1.0.9
+python-dotenv==1.1.1
 gunicorn==21.2.0
 eventlet==0.33.3
-protobuf==4.25.1
-gunicorn==21.2.0
-eventlet==0.33.3
+protobuf>=6.30.0
